--- a/landing page/index.html
+++ b/landing page/index.html
@@ -19,25 +19,10 @@
 					<p>Giving a helping hand</p>
 				</header>
 				<footer>
-					<a href="#banner" class="button style2 scrolly-middle">Share Location</a>
+					<a href="../map.html" class="button style2 scrolly-middle">Share Location</a>
 				</footer>
 			</section>
-
-		<!-- Banner -->
-			<section id="banner">
-				<header>
-					<h2>Your location has been shared</h2>
-				</header>
-				<p>Thank you for making a diffrence in our community. 
-					<br>Please share this with others so that we are able to better allocate resources to help.
-				</p>
-				<footer>
-					<a href="#top" class="button style2 scrolly">Return to the home page</a>
-				</footer>
-			</section>
-
 		
-
 		<!-- Generic -->
 		<!--
 			<article class="container box style3">
